<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="error_loading_list">Error loading realty list</string>
    <string name="back_button">Back button</string>
    <string name="real_estate_manager">Real Estate Manager</string>
    <string name="realty">Realty</string>
    <string name="agent">Agent</string>
    <string name="photo">Photo</string>
    <string name="photo_name">Photo name</string>
    <string name="background">Background</string>
    <string name="edit_photo_button">Edit photo button</string>
    <string name="remove_photo_button">Remove photo button</string>
    <string name="add_agent">Add agent</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="no_realty_found">No realty found.</string>
    <string name="surface_icon">Surface icon</string>
    <string name="msquared">m²</string>
    <string name="rooms_icon">Rooms icon</string>
    <string name="bathrooms_icon">Bathrooms Icon</string>
    <string name="bedrooms_icon">Bedrooms icon</string>
    <string name="location">Location</string>
    <string name="location_icon">Location Icon</string>
    <string name="market_entry_date">Market entry date</string>
    <string name="sale_date">Sale date</string>
    <string name="take_photo_button">Take photo button</string>
    <string name="insert_photo_button">Insert photo button</string>
    <string name="description">Description</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="address">Address</string>
    <string name="close_to">Close to:</string>
    <string name="entry_market_date">Entry market date</string>
    <string name="sold">Sold</string>
    <string name="agent_in_charge">Agent in charge</string>
    <string name="save">Save</string>
    <string name="total_amount">Total amount</string>
    <string name="contribution_amount">Contribution amount</string>
    <string name="dollar">$</string>
    <string name="interest_rate">Interest rate</string>
    <string name="percent">%</string>
    <string name="duration">Duration</string>
    <string name="y">y</string>
    <string name="interests">Interests</string>
    <string name="total_cost">Total cost</string>
    <string name="monthly_installments">Monthly Installments</string>
    <string name="no_connection_or_geolocation_data">No connection or geolocation data.</string>
    <string name="retry">Retry</string>
    <string name="type">Type</string>
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="duplex">Duplex</string>
    <string name="penthouse">Penthouse</string>
    <string name="price">Price</string>
    <string name="minimum_price">Minimum Price</string>
    <string name="maximum_price">Maximum Price</string>
    <string name="surface">Surface</string>
    <string name="minimum_surface">Minimum Surface</string>
    <string name="maximum_surface">Maximum Surface</string>
    <string name="rooms">Rooms</string>
    <string name="minimum_number_of_rooms">Minimum number of rooms</string>
    <string name="min_of_bedrooms">Min # of bedrooms</string>
    <string name="min_of_bathrooms">Min # of bathrooms</string>
    <string name="district">District</string>
    <string name="district_name">District name</string>
    <string name="nearby">Nearby</string>
    <string name="park">Park</string>
    <string name="subway">Subway</string>
    <string name="shops">Shops</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="new_realty">New Realty</string>
    <string name="map">Map</string>
    <string name="edit_realty">Edit Realty</string>
    <string name="edit">Edit</string>
    <string name="search_realty">Search realty</string>

    <string-array name="types_array">
        <item>Flat</item>
        <item>House</item>
        <item>Duplex</item>
        <item>Penthouse</item>
    </string-array>

</resources>
