<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="photo"
            type="com.openclassrooms.realestatemanager.data.model.Photo" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/photoCardView"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcUri="@{photo.uri}"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/photo"/>

            <ImageView
                android:id="@+id/textBackgroundImageView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="#7F000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/background"/>

            <TextView
                android:id="@+id/photoTextView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@{photo.name}"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textBackgroundImageView"
                tools:text="Facade" />

            <ImageButton
                android:id="@+id/editPhotoNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/removePhotoButton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_white"
                android:contentDescription="@string/edit_photo_button"
                tools:ignore="VectorDrawableCompat" />

            <ImageButton
                android:id="@+id/removePhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/photoImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cancel_white"
                android:contentDescription="@string/remove_photo_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</layout>

